--- a/src/main/java/by/grsu/solomenskay/web/component/menu/MenuPanel.html
+++ b/src/main/java/by/grsu/solomenskay/web/component/menu/MenuPanel.html
@@ -1,5 +1,6 @@
 <wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
 	<ul class="menu">
 		<li><a wicket:id="link-home">Home</a></li>
+		<li><a wicket:id="link-horses">Horses</a></li>
 	</ul>
 </wicket:panel>
